--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="header-menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#projetos">Projetos</a></li>
-          <li><a href="">Energia Solar</a></li>
+          <li><a href="#vantagens">Energia Solar</a></li>
           <li><a href="#contatos">Contatos</a></li>
         </ul>
       </nav>
@@ -126,7 +126,7 @@
     </div>
   </section>
 
-  <section class="vantagens-bg">
+  <section id="vantagens" class="vantagens-bg">
     <div class="vantagens container">
       <h2>Vantagens</h2>
 
