--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
           </div>
 
-          <h1>Baurueri</h1>
-          <p>Projeto de Energia Solar realizado em Baurueri, São Paulo</p>
+          <h1>Barueri</h1>
+          <p>Projeto de Energia Solar realizado em Barueri, São Paulo</p>
           <p>Sistema: 5.28kWp</p>
         </div>
 
