--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <section class="projetos-bg" id="projetos">
     <div class="projetos container">
-      <h2>Projetos.</h2>
+      <h2>Projetos</h2>
 
       <div class="projetos-slider">
 
