--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <div class="introducao container">
       <div class="introducao-conteudo">
         <h1>Instalação de placas solares com qualidade.</h1>
-        <p>A JC Construção Civil faz as Instalações de placas solares, visando sempre a qualidade e satisfação do cliente.
+        <p>Energia sustentável e satisfação garantida: instale placas solares com a JC Construção Civil! Reduza custos e contribua com o planeta.
         </p>
         <a href="">Entre em Contato</a>
       </div>
 
       <div>
-        <img src="img/IA-FOTO.png" alt="">
+        <img src="./img-jc/imagem-slider/imagem-cotia-5.jpeg" width="500px" height="600px" alt="">
       </div>
 
     </div>
@@ -60,16 +60,11 @@
             <button id="prev-button"><img src="img-jc/arrow-left.png" alt=""></button>
 
             <div class="projetos-imagem">
-              <img src="img-jc/imagem-slider/imagem-cotia-1.jpeg" width="600px" height="390px"alt="" class="slider on">
-              <img src="img-jc/imagem-slider/imagem-cotia-2.jpeg" width="600px" height="390px" alt="" class="slider">
-              <img src="img-jc/imagem-slider/imagem-cotia-3.jpeg" width="600px" height="390px" alt="" class="slider">
-              
-
-
+              <img src="img-jc/imagem-slider/imagem-cotia-1.jpeg" width="600px" height="390px" alt="imagem-projeto" class="slider on">
+              <img src="img-jc/imagem-slider/imagem-cotia-2.jpeg" width="600px" height="390px" alt="imagem-projeto" class="slider">
+              <img src="img-jc/imagem-slider/imagem-cotia-3.jpeg" width="600px" height="390px" alt="imagem-projeto" class="slider">
             </div>
-
             <button id="next-button"><img src="img-jc/arrow-right.png" alt=""></button>
-
           </div>
 
           <h1>Cotia - SP</h1>
@@ -85,11 +80,11 @@
             <button id="prev-button2"><img src="img-jc/arrow-left.png" alt=""></button>
 
             <div class="projetos-imagem">
-              <img src="img-jc/imagem-slider/imagem-baurueri-1.jpeg" width="600px" height="390px"  alt="" class="slider2 on">
-              <img src="img-jc/imagem-slider/imagem-baurueri.jpeg" width="600px" height="390px"  alt="" class="slider2">
-              <img src="img-jc/imagem-slider/imagem-baurueri-2.jpeg" width="600px" height="390px"  alt="" class="slider2">
-              <img src="img-jc/imagem-slider/imagem-baurueri-3.jpeg" width="600px" height="390px" alt="" class="slider2">
-              <img src="img-jc/imagem-slider/imagem-baurueri-4.jpeg" width="600px" height="390px"  alt="" class="slider2">
+              <img src="img-jc/imagem-slider/imagem-baurueri-1.jpeg" width="600px" height="390px"  alt="imagem-projeto" class="slider2 on">
+              <img src="img-jc/imagem-slider/imagem-baurueri.jpeg" width="600px" height="390px"  alt="imagem-projeto" class="slider2">
+              <img src="img-jc/imagem-slider/imagem-baurueri-2.jpeg" width="600px" height="390px"  alt="imagem-projeto" class="slider2">
+              <img src="img-jc/imagem-slider/imagem-baurueri-3.jpeg" width="600px" height="390px" alt="imagem-projeto" class="slider2">
+              <img src="img-jc/imagem-slider/imagem-baurueri-4.jpeg" width="600px" height="390px"  alt="imagem-projeto" class="slider2">
             </div>
 
             <button id="next-button2"><img src="img-jc/arrow-right.png" alt=""></button>
@@ -184,17 +179,19 @@
     <div class="footer-contato">
       <h3>CONTATO</h3>
       <ul>
-        <li>+55 11 9999-9999</li>
-        <li>contato@gmail.com</li>
-        <li>Rua Exemplo, 35 - Jardim</li>
+        <li>+55 11 4551-8110</li>
+        <li>jcconceicaoconstrucao@gmail.com</li>
+        <li>Av. Prof. Joaquim Barreto, 232 - Centro, Cotia - SP</li>
       </ul>
       <div class="footer-redes">
         <a href="">
-          <img src="img/whatsapp.png" alt="">
+          <img width="40px" src="./img-jc/redes/whatsapp.png" alt="whatsapp">
         </a>
-
         <a href="">
-          <img src="img/facebook.svg" alt="">
+          <img width="40px" src="img-jc/redes/facebook.png" alt="facebook">
+        </a>
+        <a href="">
+          <img width="40px" src="img-jc/redes/instagram.png" alt="instagram">
         </a>
       </div>
     </div>
@@ -211,11 +208,11 @@
 
   </footer>
   <div class="google-maps container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.2054955879385!2d-46.34885584892335!3d-23.489106664739165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce7b5ee6f8226b%3A0x5e52a09eb414337e!2sR.%20Humait%C3%A1%20-%20Jardim%20Goncalves%2C%20Itaquaquecetuba%20-%20SP%2C%2008573-580!5e0!3m2!1spt-BR!2sbr!4v1678887027862!5m2!1spt-BR!2sbr" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.030051384386!2d-46.938036884474876!3d-23.603255169027054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf0770b2801551%3A0x4c56aa20f2deb961!2sAv.%20Prof.%20Joaquim%20Barreto%2C%20232%20-%20Centro%2C%20Cotia%20-%20SP%2C%2006700-170!5e0!3m2!1spt-BR!2sbr!4v1678935310628!5m2!1spt-BR!2sbr" width="1000" height="450" style="border:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="whatsap">
     <a href="">
-      <img src="img/whatsapp.png" alt="">
+      <img width="70px" src="./img-jc/redes/whatsapp.png" alt="whatsap">
     </a>
   </div>
   <p class="footer-copy container">JC Construção Civil.  Alguns Direitos reservados</p>
